--- a/views/business/purchase-order-list.html
+++ b/views/business/purchase-order-list.html
@@ -16,8 +16,11 @@
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12">
             <div class="layui-card">
-                <div class="layui-card-header">库存列表</div>
+                <div class="layui-card-header">采购单列表</div>
                 <div class="layui-card-body">
+                    <div class="layui-btn-group" style="margin-bottom: 10px;">
+                        <button class="layui-btn" data-type="add">新增</button>
+                    </div>
                     <div class="demoTable" style="margin-bottom: 10px;">
                         物品名称：
                         <div class="layui-inline">
@@ -27,25 +30,14 @@
                         <div class="layui-inline">
                             <input class="layui-input" name="batchNo" id="batchNo" autocomplete="off">
                         </div>
-                        类型：
-                        <div class="layui-inline">
-                            <div class="layui-form">
-                                <select name="type" id="type" lay-filter="typeSelect">
-                                    <option value="">请选择</option>
-                                    <option value="1">原材料</option>
-                                    <option value="2">成品</option>
-                                </select>
-                            </div>
-                        </div>
                         <button class="layui-btn" data-type="reload">搜索</button>
-                        <button class="layui-btn" data-type="download">下载</button>
-                        <button class="layui-btn" data-type="print">打印</button>
+                        <!--<button class="layui-btn" data-type="download">下载</button>
+                        <button class="layui-btn" data-type="print">打印</button>-->
                     </div>
 
                     <div class="my_show">
                     <table class="layui-hide" id="order-table" lay-filter="order-table"></table>
                     </div>
-
                     <script type="text/html" id="typeTpl">
                         {{#  if(d.type === 1){ }}
                         <span style="color: #F581B1;">原材料</span>
@@ -53,9 +45,27 @@
                         <span style="color: #F581B1;">成品</span>
                         {{#  } }}
                     </script>
+                    <script type="text/html" id="statusTpl">
+                        {{#  if(d.status === 0){ }}
+                        <span style="color: #F581B1;">草稿</span>
+                        {{#  } else if(d.status === 1) { }}
+                        <span style="color: #F581B1;">审核中</span>
+                        {{#  } else if(d.status === 2) { }}
+                        <span style="color: #F581B1;">已入库</span>
+                        {{#  } else if(d.status === 3) { }}
+                        <span style="color: #F581B1;">驳回</span>
+                        {{#  } }}
+                    </script>
 
                     <script type="text/html" id="user-table-barDemo">
                         <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
+                        {{#  if(d.status === 0 || d.status === 3){ }}
+                            <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+                            <a class="layui-btn layui-btn-xs" lay-event="audit">提交审核</a>
+                        {{#  } }}
+                        {{#  if(d.status === 0){ }}
+                        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+                        {{#  } }}
                     </script>
 
                 </div>
@@ -82,15 +92,23 @@
         //方法级渲染
         table.render({
             elem: '#order-table'
-            , url: domain + 'api/goods/findGoodsPage'
+            , url: domain + 'api/purchaseOrder/findPurchaseOrderPage'
             , cols: [[
-                {field: 'goodsName', title: '物品名称', width: 200, sort: true}
+                {field: 'goodsName', title: '物品名称', width: 180, sort: true}
                 , {field: 'goodsModel', title: '物品型号', width: 180, sort: true}
+                , {field: 'status', title: '状态', width: 80, templet: '#statusTpl', unresize: true}
                 , {field: 'num', title: '物品数量', width: 100}
                 , {field: 'unit', title: '单位', width: 80, sort: true}
-                , {field: 'color', title: '颜色', width: 60}
                 , {field: 'type', title: '类型', templet: '#typeTpl', width: 80, unresize: true}
-                , {field: 'createTime', title: '创建时间'}
+                , {field: 'batchNo', title: '批次', width: 115}
+                , {field: 'unitPrice', title: '单价', width: 80, sort: true}
+                , {field: 'color', title: '颜色', width: 60}
+                , {field: 'produceDate', title: '生产时间', width: 120}
+                , {field: 'supplier', title: '供应商', width: 180}
+                , {field: 'buyer', title: '购买人', width: 110}
+                , {field: 'buyDate', title: '购买时间', width: 120}
+                , {field: 'createTime', title: '创建时间', width: 170}
+                , {field: 'remarks', title: '备注', width: 200}
                 , {align: 'center', fixed: 'right', toolbar: '#user-table-barDemo', width:180}
             ]]
             , id: 'orderTable'
@@ -107,13 +125,12 @@
             if (obj.event === 'detail') {
                 var index = layer.open({
                     type: 2,
-                    title: "查看物品",
-                    content: 'goods-detail.html',
+                    title: "查看采购单",
+                    content: 'purchase-order-detail.html',
                     area: ['300px', '300px'],
                     maxmin: true,
                     success: function (layero, index) {
                         var body = layer.getChildFrame('body', index);
-                        var iframeWin = window[layero.find('iframe')[0]['name']]; //得到iframe页的窗口对象，执行iframe页的方法：iframeWin.method();
                         body.find('input[name="goodsName"]').val(data.goodsName);
                         body.find('input[name="goodsModel"]').val(data.goodsModel);
                         body.find("#goodsType").val(data.type);
@@ -125,19 +142,81 @@
                         body.find('input[name="totalPrice"]').val(data.totalPrice);
                         body.find('input[name="produceDate"]').val(data.produceDate);
                         body.find('input[name="expiredDate"]').val(data.expiredDate);
+                        body.find('input[name="supplier"]').val(data.supplier);
+                        body.find('input[name="buyer"]').val(data.buyer);
+                        body.find('input[name="buyDate"]').val(data.buyDate);
                         if (data.remarks){
                             body.find('textarea[name="remarks"]').text(data.remarks);
                         }
-
                     }
                 });
                 layer.full(index);
+            } else if (obj.event === 'edit') {
+                var index = layer.open({
+                    type: 2,
+                    title: "编辑采购单",
+                    content: 'purchase-order-edit.html?id=' + data.id,
+                    area: ['550px', '500px'],
+                    maxmin: true,
+                    success: function (layero, index) {
+                        var body = layer.getChildFrame('body', index);
+                    }
+                });
+                layer.full(index);
+            }  else if (obj.event === 'audit') {
+                layer.confirm('确定采购单提交申请？', function (index) {
+                    $.ajax({
+                        type: 'PUT',
+                        contentType: "application/json;",
+                        url: domain + "api/purchaseOrder/updateToAudit/" + data.id,
+                        success: function (result) {
+                            if (result.code == 0) {
+                                layer.msg(result.msg);
+                                layui.table.reload('orderTable');
+                            } else {
+                                layer.alert(result.msg);
+                            }
+                        },
+                        error: function () {
+                            console.log("网络错误！");
+                        }
+                    });
+                });
+            } else if (obj.event === 'del') {
+                layer.confirm('确定删除该采购单？', function (index) {
+                    $.ajax({
+                        type: 'DELETE',
+                        contentType: "application/json;",
+                        url: domain + "api/purchaseOrder/deletePurchaseOrder/" + data.id,
+                        success: function (result) {
+                            if (result.code == 0) {
+                                layer.msg(result.msg);
+                                layui.table.reload('orderTable');
+                            } else {
+                                layer.alert(result.msg);
+                            }
+                        },
+                        error: function () {
+                            console.log("网络错误！");
+                        }
+                    });
+                });
             }
         });
 
 
         /* 触发弹层 */
         var active = {
+            add: function () {
+                var index = layer.open({
+                    type: 2,
+                    title: "新增采购单",
+                    content: 'purchase-order-add.html',
+                    area: ['300px', '300px'],
+                    maxmin: true
+                });
+                layer.full(index);
+            },
             reload: function () {
                 //执行重载
                 table.reload('orderTable', {
