--- a/views/index.html
+++ b/views/index.html
@@ -1,213 +1,212 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>layuiAdmin std - 通用后台管理模板系统（iframe标准版）</title>
-  <meta name="renderer" content="webkit">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <link rel="stylesheet" href="../layuiadmin/layui/css/layui.css" media="all">
-  <link rel="stylesheet" href="../layuiadmin/style/admin.css" media="all">
-  
+    <meta charset="utf-8">
+    <title>layuiAdmin std - 通用后台管理模板系统（iframe标准版）</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <link rel="stylesheet" href="../layuiadmin/layui/css/layui.css" media="all">
+    <link rel="stylesheet" href="../layuiadmin/style/admin.css" media="all">
+
 </head>
 <body class="layui-layout-body">
-  
-  <div id="LAY_app">
+
+<div id="LAY_app">
     <div class="layui-layout layui-layout-admin">
-      <div class="layui-header">
-        <!-- 头部区域 -->
-        <ul class="layui-nav layui-layout-left">
-          <li class="layui-nav-item layadmin-flexible" lay-unselect>
-            <a href="javascript:;" layadmin-event="flexible" title="侧边伸缩">
-              <i class="layui-icon layui-icon-shrink-right" id="LAY_app_flexible"></i>
-            </a>
-          </li>
-          <!--<li class="layui-nav-item layui-hide-xs" lay-unselect>
-            <a href="http://www.layui.com/admin/" target="_blank" title="前台">
-              <i class="layui-icon layui-icon-website"></i>
-            </a>
-          </li>-->
-          <li class="layui-nav-item" lay-unselect>
-            <a href="javascript:;" layadmin-event="refresh" title="刷新">
-              <i class="layui-icon layui-icon-refresh-3"></i>
-            </a>
-          </li>
-        </ul>
-        <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
-          
-          <li class="layui-nav-item" lay-unselect>
-            <a lay-href="app/message/index.html" layadmin-event="message" lay-text="消息中心">
-              <i class="layui-icon layui-icon-notice"></i>  
-              
-              <!-- 如果有新消息，则显示小圆点 -->
-              <span class="layui-badge-dot"></span>
-            </a>
-          </li>
-          <!--<li class="layui-nav-item layui-hide-xs" lay-unselect>
-            <a href="javascript:;" layadmin-event="theme">
-              <i class="layui-icon layui-icon-theme"></i>
-            </a>
-          </li>
-          <li class="layui-nav-item layui-hide-xs" lay-unselect>
-            <a href="javascript:;" layadmin-event="note">
-              <i class="layui-icon layui-icon-note"></i>
-            </a>
-          </li>-->
-          <li class="layui-nav-item" lay-unselect>
-            <a href="javascript:;">
-              <cite id="login_user">贤心</cite>
-            </a>
-            <dl class="layui-nav-child">
-              <dd><a lay-href="set/user/info.html">基本资料</a></dd>
-              <dd><a lay-href="set/user/password.html">修改密码</a></dd>
-              <hr>
-              <dd layadmin-event="logout" style="text-align: center;"><a>退出</a></dd>
-            </dl>
-          </li>
-          
-          <li class="layui-nav-item layui-hide-xs" lay-unselect>
-            <a href="javascript:;" layadmin-event=""><i class="layui-icon layui-icon-more-vertical"></i></a>
-          </li>
-          <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-unselect>
-            <a href="javascript:;" layadmin-event="more"><i class="layui-icon layui-icon-more-vertical"></i></a>
-          </li>
-        </ul>
-      </div>
-      
-      <!-- 侧边菜单 -->
-      <div class="layui-side layui-side-menu">
-        <div class="layui-side-scroll">
-          <div class="layui-logo" lay-href="home/console.html">
-            <span>layuiAdmin</span>
-          </div>
+        <div class="layui-header">
+            <!-- 头部区域 -->
+            <ul class="layui-nav layui-layout-left">
+                <li class="layui-nav-item layadmin-flexible" lay-unselect>
+                    <a href="javascript:;" layadmin-event="flexible" title="侧边伸缩">
+                        <i class="layui-icon layui-icon-shrink-right" id="LAY_app_flexible"></i>
+                    </a>
+                </li>
+                <!--<li class="layui-nav-item layui-hide-xs" lay-unselect>
+                  <a href="http://www.layui.com/admin/" target="_blank" title="前台">
+                    <i class="layui-icon layui-icon-website"></i>
+                  </a>
+                </li>-->
+                <li class="layui-nav-item" lay-unselect>
+                    <a href="javascript:;" layadmin-event="refresh" title="刷新">
+                        <i class="layui-icon layui-icon-refresh-3"></i>
+                    </a>
+                </li>
+            </ul>
+            <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
 
-		  <script id="demo" type="text/html">
-			<ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu" lay-filter="layadmin-system-side-menu">
-				{{#  layui.each(d.data, function(index, item){ }}
-					<li data-name="home" class="layui-nav-item">
-                      {{#  if(item.data.length !== 0){ }}
-                        <a href="javascript:;" lay-tips="{{item.title}}" lay-direction="2">
-                          <i class="layui-icon {{item.menuIcon}}"></i>
-                            <cite>{{item.title}}</cite>
-                        </a>
-                      {{#  } else if(item.data.length === 0){ }}
-                      <i class="layui-icon {{item.menuIcon}}"></i>
-                      <a lay-href="{{item.menuUrl}}">{{item.title}}</a>
-                      {{#  } }}
+                <li class="layui-nav-item" lay-unselect>
+                    <a lay-href="app/message/index.html" layadmin-event="message" lay-text="消息中心">
+                        <i class="layui-icon layui-icon-notice"></i>
 
-					  {{#  layui.each(item.data, function(index2, item2){ }}
-						  <dl class="layui-nav-child">
-							<dd data-name="console">
-                              <i class="layui-icon {{item2.menuIcon}}"></i>
-							  <a lay-href="{{item2.menuUrl}}">{{item2.title}}</a>
-							</dd>
-						  </dl>
-					  {{#  }); }}
-					</li>
-				  {{#  }); }}
-			  </ul>
-			</script>
-          
-          <div id="view"></div>
+                        <!-- 如果有新消息，则显示小圆点 -->
+                        <span class="layui-badge-dot"></span>
+                    </a>
+                </li>
+                <!--<li class="layui-nav-item layui-hide-xs" lay-unselect>
+                  <a href="javascript:;" layadmin-event="theme">
+                    <i class="layui-icon layui-icon-theme"></i>
+                  </a>
+                </li>
+                <li class="layui-nav-item layui-hide-xs" lay-unselect>
+                  <a href="javascript:;" layadmin-event="note">
+                    <i class="layui-icon layui-icon-note"></i>
+                  </a>
+                </li>-->
+                <li class="layui-nav-item" lay-unselect>
+                    <a href="javascript:;">
+                        <cite id="login_user">贤心</cite>
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd><a lay-href="set/user/info.html">基本资料</a></dd>
+                        <dd><a lay-href="set/user/password.html">修改密码</a></dd>
+                        <hr>
+                        <dd layadmin-event="logout" style="text-align: center;"><a>退出</a></dd>
+                    </dl>
+                </li>
 
-          </ul>
+                <li class="layui-nav-item layui-hide-xs" lay-unselect>
+                    <a href="javascript:;" layadmin-event=""><i class="layui-icon layui-icon-more-vertical"></i></a>
+                </li>
+                <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-unselect>
+                    <a href="javascript:;" layadmin-event="more"><i class="layui-icon layui-icon-more-vertical"></i></a>
+                </li>
+            </ul>
         </div>
-      </div>
 
-      <!-- 页面标签 -->
-      <div class="layadmin-pagetabs" id="LAY_app_tabs">
-        <div class="layui-icon layadmin-tabs-control layui-icon-prev" layadmin-event="leftPage"></div>
-        <div class="layui-icon layadmin-tabs-control layui-icon-next" layadmin-event="rightPage"></div>
-        <div class="layui-icon layadmin-tabs-control layui-icon-down">
-          <ul class="layui-nav layadmin-tabs-select" lay-filter="layadmin-pagetabs-nav">
-            <li class="layui-nav-item" lay-unselect>
-              <a href="javascript:;"></a>
-              <dl class="layui-nav-child layui-anim-fadein">
-                <dd layadmin-event="closeThisTabs"><a href="javascript:;">关闭当前标签页</a></dd>
-                <dd layadmin-event="closeOtherTabs"><a href="javascript:;">关闭其它标签页</a></dd>
-                <dd layadmin-event="closeAllTabs"><a href="javascript:;">关闭全部标签页</a></dd>
-              </dl>
-            </li>
-          </ul>
+        <!-- 侧边菜单 -->
+        <div class="layui-side layui-side-menu">
+            <div class="layui-side-scroll">
+                <div class="layui-logo" lay-href="main.html">
+                    <span>layuiAdmin</span>
+                </div>
+
+                <script id="demo" type="text/html">
+                    <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu"
+                        lay-filter="layadmin-system-side-menu">
+                        {{# layui.each(d.data, function(index, item){ }}
+                        <li data-name="home" class="layui-nav-item">
+                            {{# if(item.data.length !== 0){ }}
+                            <a href="javascript:;" lay-tips="{{item.title}}" lay-direction="2">
+                                <i class="layui-icon {{item.menuIcon}}"></i>
+                                <cite>{{item.title}}</cite>
+                            </a>
+                            {{# } else if(item.data.length === 0){ }}
+                            <i class="layui-icon {{item.menuIcon}}"></i>
+                            <a lay-href="{{item.menuUrl}}">{{item.title}}</a>
+                            {{# } }}
+
+                            {{# layui.each(item.data, function(index2, item2){ }}
+                            <dl class="layui-nav-child">
+                                <dd data-name="console">
+                                    <i class="layui-icon {{item2.menuIcon}}"></i>
+                                    <a lay-href="{{item2.menuUrl}}">{{item2.title}}</a>
+                                </dd>
+                            </dl>
+                            {{# }); }}
+                        </li>
+                        {{# }); }}
+                    </ul>
+                </script>
+
+                <div id="view"></div>
+
+                </ul>
+            </div>
         </div>
-        <div class="layui-tab" lay-unauto lay-allowClose="true" lay-filter="layadmin-layout-tabs">
-          <ul class="layui-tab-title" id="LAY_app_tabsheader">
-            <li lay-id="home/console.html" class="layui-this"><i class="layui-icon layui-icon-home"></i></li>
-          </ul>
+
+        <!-- 页面标签 -->
+        <div class="layadmin-pagetabs" id="LAY_app_tabs">
+            <div class="layui-icon layadmin-tabs-control layui-icon-prev" layadmin-event="leftPage"></div>
+            <div class="layui-icon layadmin-tabs-control layui-icon-next" layadmin-event="rightPage"></div>
+            <div class="layui-icon layadmin-tabs-control layui-icon-down">
+                <ul class="layui-nav layadmin-tabs-select" lay-filter="layadmin-pagetabs-nav">
+                    <li class="layui-nav-item" lay-unselect>
+                        <a href="javascript:;"></a>
+                        <dl class="layui-nav-child layui-anim-fadein">
+                            <dd layadmin-event="closeThisTabs"><a href="javascript:;">关闭当前标签页</a></dd>
+                            <dd layadmin-event="closeOtherTabs"><a href="javascript:;">关闭其它标签页</a></dd>
+                            <dd layadmin-event="closeAllTabs"><a href="javascript:;">关闭全部标签页</a></dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+            <div class="layui-tab" lay-unauto lay-allowClose="true" lay-filter="layadmin-layout-tabs">
+                <ul class="layui-tab-title" id="LAY_app_tabsheader">
+                    <li lay-id="main.html" class="layui-this"><i class="layui-icon layui-icon-home"></i></li>
+                </ul>
+            </div>
         </div>
-      </div>
-      
-      
-      <!-- 主体内容 -->
-      <div class="layui-body" id="LAY_app_body">
-        <div class="layadmin-tabsbody-item layui-show">
-          <iframe src="home/console.html" frameborder="0" class="layadmin-iframe"></iframe>
+
+
+        <!-- 主体内容 -->
+        <div class="layui-body" id="LAY_app_body">
+            <div class="layadmin-tabsbody-item layui-show">
+                <iframe src="main.html" frameborder="0" class="layadmin-iframe"></iframe>
+            </div>
         </div>
-      </div>
-      
-      <!-- 辅助元素，一般用于移动设备下遮罩 -->
-      <div class="layadmin-body-shade" layadmin-event="shade"></div>
+
+        <!-- 辅助元素，一般用于移动设备下遮罩 -->
+        <div class="layadmin-body-shade" layadmin-event="shade"></div>
     </div>
-  </div>
+</div>
 
-  <script src="../layuiadmin/layui/layui.js"></script>
-  <script src="../layuiadmin/commons.js"></script>
-  <script>
-  var element;
-  layui.config({
-    base: '../layuiadmin/' //静态资源所在路径
-  }).extend({
-    index: 'lib/index' //主入口模块
-  }).use(['index', 'element', 'table', 'laytpl'], function(){
-	var laytpl = layui.laytpl;
-	var $ = layui.$
-    ,admin = layui.admin
-    ,layer = layui.layer
-	element = layui.element;
+<script src="../layuiadmin/layui/layui.js"></script>
+<script src="../layuiadmin/commons.js"></script>
+<script>
+    var element;
+    layui.config({
+        base: '../layuiadmin/' //静态资源所在路径
+    }).extend({
+        index: 'lib/index' //主入口模块
+    }).use(['index', 'element', 'table', 'laytpl'], function () {
+        var $ = layui.$
+            , layer = layui.layer
+            , laytpl = layui.laytpl
+            ,element = layui.element;
 
-      $.ajax({
-          type: 'GET',
-          contentType: "application/json;",
-          url: domain + "api/user/auth",
-          success: function(result){
-              if(result.code == 0){
+        $.ajax({
+            type: 'GET',
+            contentType: "application/json;",
+            url: domain + "api/user/auth",
+            success: function (result) {
+                if (result.code == 0) {
 
-              } else {
-                  layer.alert(result.msg);
-                  window.location.href = "/layuiAdmin/views/login.html";
-              }
-          },
-          error: function () {
-              console.log("网络错误！");
-          }
-      });
+                } else {
+                    layer.alert(result.msg);
+                    window.location.href = "/layuiAdmin/views/login.html";
+                }
+            },
+            error: function () {
+                console.log("网络错误！");
+            }
+        });
 
-	$.ajax({
-		type: 'GET',
-		contentType: "application/json;",
-		url: domain + "api/user/findMenus",
-		success: function(result){
-			if(result.code == 0){
-				var getTpl = demo.innerHTML
-				,view = document.getElementById('view');
-				laytpl(getTpl).render(result, function(html){
-				  view.innerHTML = html;
-				});
-                element.init();
-			} else {
-				layer.alert(result.msg);
-			}
-		},
-		error: function () {
-			console.log("网络错误！");
-		}
-	});
-  
+        $.ajax({
+            type: 'GET',
+            contentType: "application/json;",
+            url: domain + "api/user/findMenus",
+            success: function (result) {
+                if (result.code == 0) {
+                    var getTpl = demo.innerHTML
+                        , view = document.getElementById('view');
+                    laytpl(getTpl).render(result, function (html) {
+                        view.innerHTML = html;
+                    });
+                    element.init();
+                } else {
+                    layer.alert(result.msg);
+                }
+            },
+            error: function () {
+                console.log("网络错误！");
+            }
+        });
 
-	});
-  </script>
+
+    });
+</script>
 </body>
 </html>
 
