--- a/views/system/role-list.html
+++ b/views/system/role-list.html
@@ -20,9 +20,7 @@
           
             
 			<div class="layui-btn-group" style="margin-bottom: 10px;">
-                <button class="layui-btn layui-btn-sm" data-type="add"><i class="layui-icon">&#xe654;</i></button>
-                <!--<button class="layui-btn layui-btn-sm" data-type="edit"><i class="layui-icon">&#xe642;</i></button>-->
-                <!--<button class="layui-btn layui-btn-sm" data-type="del"><i class="layui-icon">&#xe640;</i></button>-->
+                <button class="layui-btn" data-type="add">新增</button>
             </div>
 
 			<div class="demoTable" style="margin-bottom: 10px;">
