--- a/views/system/user-list.html
+++ b/views/system/user-list.html
@@ -18,14 +18,9 @@
             <div class="layui-card">
                 <div class="layui-card-header">用户列表</div>
                 <div class="layui-card-body">
-
-
                     <div class="layui-btn-group" style="margin-bottom: 10px;">
-                        <button class="layui-btn layui-btn-sm" data-type="add"><i class="layui-icon">&#xe654;</i>
-                        </button>
-                        <!--<button class="layui-btn layui-btn-sm" data-type="edit"><i class="layui-icon">&#xe642;</i></button>-->
-                        <button class="layui-btn layui-btn-sm" data-type="del"><i class="layui-icon">&#xe640;</i>
-                        </button>
+                        <button class="layui-btn" data-type="add">新增</button>
+                        <button class="layui-btn" data-type="del">删除</button>
                     </div>
 
                     <div class="demoTable" style="margin-bottom: 10px;">
@@ -87,12 +82,12 @@
             ]]
             , id: 'userTable'
             , page: true
-            ,height: 'full-100'
+            , height: 'full-100'
         });
 
         element.render();
 
-//监听表格复选框选择
+        //监听表格复选框选择
         table.on('checkbox(user-table)', function (obj) {
             console.log(obj)
         });
