--- a/views/business/goods-record-list.html
+++ b/views/business/goods-record-list.html
@@ -70,7 +70,7 @@
             , cols: [[
                 {field: 'goodsName', title: '物品名称', width: 200, sort: true}
                 , {field: 'goodsModel', title: '物品型号', width: 120, sort: true}
-                , {field: 'batchNo', title: '批次', width: 120}
+                , {field: 'batchNo', title: '申请单ID', width: 120}
                 , {field: 'user', title: '使用人', width: 100, sort: true}
                 , {field: 'originalNum', title: '原始物品数量', width: 120}
                 , {field: 'goodsNum', title: '物品数量', width: 100}
