--- a/views/business/sample-order-list.html
+++ b/views/business/sample-order-list.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>订单管理</title>
+    <title>煜凯服饰</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
@@ -17,33 +17,41 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-body">
-                        样品名称：
-                        <div class="layui-inline">
-                            <input class="layui-input" name="sampleName" id="sampleName" autocomplete="off">
-                        </div>
-                        样品型号：
-                        <div class="layui-inline">
-                            <input class="layui-input" name="sampleCode" id="sampleCode" autocomplete="off">
-                        </div>
-                        <button class="layui-btn" data-type="reload">搜索</button>
+                    样品名称：
+                    <div class="layui-inline">
+                        <input class="layui-input" name="sampleName" id="sampleName" autocomplete="off">
                     </div>
-
-                    <table class="layui-hide" id="order-table" lay-filter="order-table"></table>
-
-                    <script type="text/html" id="imagesTpl">
-                        {{#  if(d.photoUrl){ }}
-                            <button class="layui-btn layui-btn-primary images" lay-event="sampleImages">样品</button>
-                        {{#  } }}
-                    </script>
-
-                    <script type="text/html" id="user-table-barDemo">
-                        <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="select">选择</a>
-                    </script>
-
+                    样品型号：
+                    <div class="layui-inline">
+                        <input class="layui-input" name="sampleCode" id="sampleCode" autocomplete="off">
+                    </div>
+                    <button class="layui-btn" data-type="reload">搜索</button>
                 </div>
+
+                <table class="layui-hide" id="order-table" lay-filter="order-table"></table>
+
+                <script type="text/html" id="imagesTpl">
+                    {{#  if(d.photoUrl){ }}
+                    <button class="layui-btn images" lay-event="sampleImages">样品</button>
+                    {{#  } }}
+                </script>
+
+                <script type="text/html" id="statusTpl">
+                    {{#  if(d.status === 0){ }}
+                    <span style="color: #F581B1;">新建</span>
+                    {{#  } else if(d.status === 1) { }}
+                    <span style="color: #F581B1;">完成</span>
+                    {{#  } }}
+                </script>
+
+                <script type="text/html" id="user-table-barDemo">
+                    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="select">选择</a>
+                </script>
+
             </div>
         </div>
     </div>
+</div>
 </div>
 
 <script src="../../layuiadmin/layui/layui.js"></script>
@@ -53,11 +61,10 @@
         base: '../../layuiadmin/' //静态资源所在路径
     }).extend({
         index: 'lib/index' //主入口模块
-    }).use(['index', 'table', 'carousel'], function () {
+    }).use(['index', 'table'], function () {
         var $ = layui.$
             , element = layui.element
             , layer = layui.layer
-            ,carousel = layui.carousel
             , table = layui.table;
 
 
@@ -68,14 +75,14 @@
             , cols: [[
                 {field: 'sampleName', title: '样品名称', width: 180, sort: true}
                 , {field: 'sampleName', title: '样品型号', width: 100}
-                , {field: 'photoUrl', title: '样品', width: 200, templet: '#imagesTpl', unresize: true}
-                , {field: 'status', title: '状态', width: 80}
+                , {field: 'photoUrl', title: '样品', width: 150, templet: '#imagesTpl', unresize: true}
+                , {field: 'status', title: '状态', width: 100, templet: '#statusTpl', unresize: true}
                 , {field: 'createTime', title: '创建时间', width: 180}
                 , {align: 'center', fixed: 'right', toolbar: '#user-table-barDemo'}
             ]]
             , id: 'orderTable'
             , page: true
-            ,height: 'full-100'
+            , height: 'full-100'
         });
 
         element.render();
@@ -126,7 +133,7 @@
             }
         };
 
-        $('.layui-btn-group .layui-btn, .demoTable .layui-btn').on('click', function () {
+        $('.layui-card-body .layui-btn, .demoTable .layui-btn').on('click', function () {
             var type = $(this).data('type');
             active[type] && active[type].call(this);
         });
