--- a/views/login.html
+++ b/views/login.html
@@ -1,53 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>登入 - layuiAdmin</title>
-  <meta name="renderer" content="webkit">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <link rel="stylesheet" href="../layuiadmin/layui/css/layui.css" media="all">
-  <link rel="stylesheet" href="../layuiadmin/style/admin.css" media="all">
-  <link rel="stylesheet" href="../layuiadmin/style/login.css" media="all">
+    <meta charset="utf-8">
+    <title>登入 - 煜凯服饰</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <link rel="stylesheet" href="../layuiadmin/layui/css/layui.css" media="all">
+    <link rel="stylesheet" href="../layuiadmin/style/admin.css" media="all">
+    <link rel="stylesheet" href="../layuiadmin/style/login.css" media="all">
+    <style>
+        .login-bg {
+            background: url(../layuiadmin/images/qj6656851613.jpg) no-repeat center;
+            background-size: cover;
+            overflow: hidden;
+        }
+    </style>
 </head>
-<body>
-
-  <div class="layadmin-user-login layadmin-user-display-show" id="LAY-user-login" style="display: none;">
-
+<body class="login-bg">
+<div class="layadmin-user-login layadmin-user-display-show" id="LAY-user-login" style="display: none;">
     <div class="layadmin-user-login-main">
-      <div class="layadmin-user-login-box layadmin-user-login-header">
-        <h2>layuiAdmin</h2>
-        <p>layui 官方出品的单页面后台管理模板系统</p>
-      </div>
-      <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
-        <div class="layui-form-item">
-          <label class="layadmin-user-login-icon layui-icon layui-icon-username" for="LAY-user-login-username"></label>
-          <input type="text" name="loginName" id="LAY-user-login-username" lay-verify="required" placeholder="用户名" class="layui-input">
+        <div class="layadmin-user-login-box layadmin-user-login-header">
+            <h2>煜凯服饰</h2>
+            <p>库存管理系统</p>
         </div>
-        <div class="layui-form-item">
-          <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-password"></label>
-          <input type="password" name="pwd" id="LAY-user-login-password" lay-verify="required" placeholder="密码" class="layui-input">
-        </div>
-        <div class="layui-form-item" style="margin-bottom: 20px;">
-          <a href="forget.html" class="layadmin-user-jump-change layadmin-link" style="margin-top: 7px;">忘记密码？</a>
-        </div>
-        <div class="layui-form-item">
-          <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-user-login-submit">登 入</button>
-        </div>
+        <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
+            <div class="layui-form-item">
+                <label class="layadmin-user-login-icon layui-icon layui-icon-username"
+                       for="LAY-user-login-username"></label>
+                <input type="text" name="loginName" id="LAY-user-login-username" lay-verify="required" placeholder="用户名"
+                       class="layui-input">
+            </div>
+            <div class="layui-form-item">
+                <label class="layadmin-user-login-icon layui-icon layui-icon-password"
+                       for="LAY-user-login-password"></label>
+                <input type="password" name="pwd" id="LAY-user-login-password" lay-verify="required" placeholder="密码"
+                       class="layui-input">
+            </div>
+            <div class="layui-form-item" style="margin-bottom: 20px;">
+                <a href="forget.html" class="layadmin-user-jump-change layadmin-link" style="margin-top: 7px;">忘记密码？</a>
+            </div>
+            <div class="layui-form-item">
+                <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-user-login-submit">登 入</button>
+            </div>
 
-      </div>
+        </div>
     </div>
-    
+
     <div class="layui-trans layadmin-user-login-footer">
-      
-      <p>© 2018 <a href="http://www.layui.com/" target="_blank">layui.com</a></p>
-      <p>
-        <span><a href="http://www.layui.com/admin/#get" target="_blank">获取授权</a></span>
-        <span><a href="http://www.layui.com/admin/pro/" target="_blank">在线演示</a></span>
-        <span><a href="http://www.layui.com/admin/" target="_blank">前往官网</a></span>
-      </p>
+
+        <p>© 2018 <a href="javascript:void(0);" target="_blank">www.xxxx.com</a></p>
+        <p>
+            <span><a href="javascript:void(0);" target="_blank">前往官网</a></span>
+        </p>
     </div>
-    
+
     <!--<div class="ladmin-user-login-theme">
       <script type="text/html" template>
         <ul>
@@ -60,56 +68,56 @@
         </ul>
       </script>
     </div>-->
-    
-  </div>
 
-  <script src="../layuiadmin/layui/layui.js"></script>  
-  <script>
-  layui.config({
-    base: '../layuiadmin/' //静态资源所在路径
-  }).extend({
-    index: 'lib/index' //主入口模块
-  }).use(['index', 'user'], function(){
-    var $ = layui.$
-    ,setter = layui.setter
-    ,admin = layui.admin
-    ,form = layui.form
-    ,router = layui.router()
-    ,search = router.search;
-	var domain = "http://47.98.232.164/";
+</div>
 
-    form.render();
+<script src="../layuiadmin/layui/layui.js"></script>
+<script>
+    layui.config({
+        base: '../layuiadmin/' //静态资源所在路径
+    }).extend({
+        index: 'lib/index' //主入口模块
+    }).use(['index', 'user'], function () {
+        var $ = layui.$
+            , setter = layui.setter
+            , admin = layui.admin
+            , form = layui.form
+            , router = layui.router()
+            , search = router.search;
+        var domain = "http://47.98.232.164/";
 
-      $("input[name='pwd']").bind('keypress', function(event){
-          if(event.keyCode == 13){
-              $(".layui-btn-fluid").click();
-          }
-      });
+        form.render();
 
-    //提交
-    form.on('submit(LAY-user-login-submit)', function(obj){
-      //请求登入接口
-      $.ajax({
-			type: 'PUT',
-			contentType: "application/json;",
-			url: domain + "api/user/login",
-			data: JSON.stringify(obj.field),
-			success: function(result){
-				if(result.code == 0){
-					sessionStorage.setItem("loginUser", JSON.stringify(result.data));
-                    window.location.href = "/layuiAdmin/views/index.html";
-				} else {
-					alert(result.msg);
-				}
-			},
-			error: function () {
-				console.log("网络错误！");
-			}
-		});
-      
+        $("input[name='pwd']").bind('keypress', function (event) {
+            if (event.keyCode == 13) {
+                $(".layui-btn-fluid").click();
+            }
+        });
+
+        //提交
+        form.on('submit(LAY-user-login-submit)', function (obj) {
+            //请求登入接口
+            $.ajax({
+                type: 'PUT',
+                contentType: "application/json;",
+                url: domain + "api/user/login",
+                data: JSON.stringify(obj.field),
+                success: function (result) {
+                    if (result.code == 0) {
+                        sessionStorage.setItem("loginUser", JSON.stringify(result.data));
+                        window.location.href = "/layuiAdmin/views/index.html";
+                    } else {
+                        alert(result.msg);
+                    }
+                },
+                error: function () {
+                    console.log("网络错误！");
+                }
+            });
+
+        });
+
     });
-    
-  });
-  </script>
+</script>
 </body>
 </html>
