--- a/views/main.html
+++ b/views/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LarryBlogCMS-Home</title>
+    <title>煜凯服饰</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -666,7 +666,7 @@
 </head>
 <body>
 <div class="layui-fluid">
-    <div class="panel_box row">
+    <div class="panel_box row" style="padding-top: 20px;">
         <div class="panel col">
             <a href="javascript:;" data-url="page/message/message.html">
                 <div class="panel_icon">
